# promptery

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main_app.cpp  mainwindow_app.cpp  mainwindow_app.h  mainwindow_app.ui  res.qrc
common/: CMakeLists.txt
common/include/common/: downloader.h  job.h  log.h  settings.h  tree_to_list_model_adapter.h
common/include/tools/: finally.h  is_one_of.h  tools.h
common/src/: downloader.cpp  job.cpp  tree_to_list_model_adapter.cpp
model/: CMakeLists.txt
model/include/model/: backend_manager.h  chat_types.h  defines.h  dummy_llm_backend.h  internal_llm_backend.h  llm_interface.h  ollama_config.h  ollama_interface.h  types.h  workflow_basic.h  workflow_processor.h
model/src/: backend_manager.cpp  dummy_llm_backend.cpp  internal_llm_backend.cpp  ollama_config.cpp  ollama_interface.cpp  workflow_basic.cpp  workflow_processor.cpp
packaging/: Promptery.icns  mac_create_icns.sh  mac_dmg.json
ui/: CMakeLists.txt
ui/include/ui/: chat_input_widget.h  chat_item_widget.h  chat_main_widget.h  chat_model.h  chat_output_widget.h  chat_request_config_model.h  chat_request_config_widget.h  chat_widget.h  combobox.h  content_model.h  content_widget.h  decorator_prompt_model.h  decorator_prompt_widget.h  defines.h  enhanced_treemodel.h  enhanced_treeview.h  file_system_model.h  label.h  log_widget.h  model_interface.h  named_object_model.h  named_object_view.h  page_interface.h  pushbutton.h  request_config_widget.h  settings_widget.h  system_prompt_model.h  system_prompt_widget.h  tab_view.h  tile_child_interface.h  tile_widget.h  treeview.h  workflow_adapter.h  workflow_basic.h  workflow_model.h  workflow_widget.h
ui/res/: ui.qrc
ui/src/: chat_input_widget.cpp  chat_item_widget.cpp  chat_main_widget.cpp  chat_main_widget.ui  chat_output_widget.cpp  chat_request_config_model.cpp  chat_request_config_widget.cpp  chat_widget.cpp  chat_widget.ui  content_widget.cpp  content_widget.ui  decorator_prompt_widget.cpp  decorator_prompt_widget.ui  defines.cpp  enhanced_treemodel.cpp  enhanced_treeview.cpp  file_system_model.cpp  log_widget.cpp  log_widget.ui  named_object_model.cpp  named_object_view.cpp  settings_widget.cpp  system_prompt_widget.cpp  system_prompt_widget.ui  tab_view.cpp  tile_widget.cpp  workflow_basic.cpp  workflow_model.cpp  workflow_widget.cpp
